# Stream_Pipeline

./: .gitignore  Readme.md  example.py  pyproject.toml
src/stream_capture/: __init__.py  base.py  config.py  factory.py  gst_utils.py  multi.py  multi_deepstream.py  sources.py
src/stream_capture/backends/: _gst_appsink.py  cpu_gst.py  cuda_gst.py  deepstream.py  opencv_gst.py
